@@ -52,11 +52,8 @@ cd ./testSubDir
 # Don't use AC_OUTPUT, but AC_CONFIG_FILES so that appending
 # still produces a valid configure.ac.  But then, tests running
 # config.status really need to append AC_OUTPUT.
-#
-# Double-quote `$me' in case it is also the name of
-# an M4 macro (such as `sinclude').
 cat > configure.in << END
-AC_INIT([[$me]], [1.0])
+AC_INIT([$me], [1.0])
 AM_INIT_AUTOMAKE
 AC_PROG_INSTALL
 AC_PROG_MAKE_SET
