@@ -1,8 +1,17 @@
 #! /bin/sh
 
-# Test to see if `sinclude' works.
+# Test to see if `m4_sinclude' works.
 
 . $srcdir/defs || exit 1
+
+# Overwrite configure.in, because the default uses `sinclude' as package
+# name and this play havoc with Autoconf on some platforms (`sinclude'
+# is an m4 macro).
+cat > configure.in <<EOF
+AC_INIT([am__sinclude], [1.0])
+AM_INIT_AUTOMAKE
+AC_CONFIG_FILES([Makefile])
+EOF
 
 mkdir sub
 cat > sub/p.m4 << 'END'
@@ -12,7 +21,7 @@ END
 : > Makefile.am
 
 $ACLOCAL || exit 1
-echo 'sinclude(sub/p.m4)' >> aclocal.m4
+echo 'm4_sinclude(sub/p.m4)' >> aclocal.m4
 
 $AUTOMAKE --Wno-error || exit 1
 
