@@ -1,3 +1,10 @@
+2002-05-22  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* tests/defs (confiugre.in): Don't double-quote $me.
+	* tests/sinclude.test: Overwrite configure.in and use
+	`am__sinclude' instead of `sinclude' as package name.
+	Excercise `m4_sinclude' instead of `sinclude'.
+
 2002-05-20  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* automake.in (conditional_implies_one_of): Rename as ...
